Working on target examples, cleaned up webpage a little

--- a/websocket_on_sd/index2.html
+++ b/websocket_on_sd/index2.html
@@ -76,8 +76,8 @@
     <div class="card">
       <h2>Glitching State</h2>
       <p class="state">state: <span id="state">%STATE%</span></p>
-      <p><button id="button" class="button">Toggle</button></p>
-      <p><button id="button_adc" class="button">Start ADC</button></p>
+      <p><button id="button" class="button">Start Glitching Test</button></p>
+      <p><button id="button_adc" class="button">Start ADC Test</button></p>
     </div>
   </div>
 <script>
